add plugins & loaders for html css img

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div>
+                <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore consectetur voluptatum nesciunt eos ipsum suscipit at totam libero. In tempora magnam adipisci quam ad quidem, sunt nobis facere dicta autem!</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
