--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 <body>
-    <main>
-        <div class="container">
-            <div>
-                <h1>Hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore consectetur voluptatum nesciunt eos ipsum suscipit at totam libero. In tempora magnam adipisci quam ad quidem, sunt nobis facere dicta autem!</p>
-            </div>
-        </div>
-    </main>
+<h1>Hello, from Netology!</h1>
+<img src="img/goblin.png" alt="goblin">
 </body>
 </html>
