--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,34 @@
   <title>Document</title>
 </head>
 <body>
-<h1>Hello, from Netology!</h1>
-<img src="img/goblin.png" alt="goblin">
+  <main>
+    <div class="container">
+      <div class="title-block">
+        <h1>Игра Гоблин</h1>
+      </div>
+      <div class="game-wrap">
+        <div class="game-block">
+          <div class="game-td"><img class="goblin" src="img/goblin.png" alt="goblin"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+          <div class="game-td"></div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+
 </body>
 </html>
