add script, problem with bg-images

--- a/src/index.html
+++ b/src/index.html
@@ -14,22 +14,22 @@
       </div>
       <div class="game-wrap">
         <div class="game-block">
-          <div class="game-td"><img class="goblin" src="img/goblin.png" alt="goblin"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
-          <div class="game-td"></div>
+          <div data-id="1" class="game-td"></div>
+          <div data-id="2"  class="game-td"></div>
+          <div data-id="3"  class="game-td"></div>
+          <div data-id="4"  class="game-td"></div>
+          <div data-id="5"  class="game-td"></div>
+          <div data-id="6"  class="game-td"></div>
+          <div data-id="7"  class="game-td"></div>
+          <div data-id="8"  class="game-td"></div>
+          <div data-id="9"  class="game-td"></div>
+          <div data-id="10"  class="game-td"></div>
+          <div data-id="11"  class="game-td"></div>
+          <div data-id="12"  class="game-td"></div>
+          <div data-id="13"  class="game-td"></div>
+          <div data-id="14"  class="game-td"></div>
+          <div data-id="15"  class="game-td"></div>
+          <div data-id="16"  class="game-td"></div>
         </div>
       </div>
     </div>
